duktape_sys/src/bindings.rs

    pub fn duk_to_lstring(ctx: *mut duk_context, index: duk_idx_t,
                          out_len: *mut duk_size_t) -> *const ::libc::c_char;
    pub fn duk_to_buffer(ctx: *mut duk_context, index: duk_idx_t,
                         out_size: *mut duk_size_t) -> *mut ::libc::c_void;
    pub fn duk_to_fixed_buffer(ctx: *mut duk_context, index: duk_idx_t,
                               out_size: *mut duk_size_t)
     -> *mut ::libc::c_void;
    pub fn duk_to_dynamic_buffer(ctx: *mut duk_context, index: duk_idx_t,
                                 out_size: *mut duk_size_t)
     -> *mut ::libc::c_void;
    pub fn duk_to_pointer(ctx: *mut duk_context, index: duk_idx_t)
     -> *mut ::libc::c_void;
    pub fn duk_to_object(ctx: *mut duk_context, index: duk_idx_t);
    pub fn duk_to_defaultvalue(ctx: *mut duk_context, index: duk_idx_t,
                               hint: duk_int_t);
    pub fn duk_to_primitive(ctx: *mut duk_context, index: duk_idx_t,
                            hint: duk_int_t);
    pub fn duk_safe_to_lstring(ctx: *mut duk_context, index: duk_idx_t,
                               out_len: *mut duk_size_t)
     -> *const ::libc::c_char;
    pub fn duk_base64_encode(ctx: *mut duk_context, index: duk_idx_t)
     -> *const ::libc::c_char;
    pub fn duk_base64_decode(ctx: *mut duk_context, index: duk_idx_t);
    pub fn duk_hex_encode(ctx: *mut duk_context, index: duk_idx_t)
     -> *const ::libc::c_char;
    pub fn duk_hex_decode(ctx: *mut duk_context, index: duk_idx_t);
    pub fn duk_json_encode(ctx: *mut duk_context, index: duk_idx_t)
     -> *const ::libc::c_char;
    pub fn duk_json_decode(ctx: *mut duk_context, index: duk_idx_t);
    pub fn duk_resize_buffer(ctx: *mut duk_context, index: duk_idx_t,
                             new_size: duk_size_t) -> *mut ::libc::c_void;
    pub fn duk_get_prop(ctx: *mut duk_context, obj_index: duk_idx_t)
     -> duk_bool_t;
    pub fn duk_get_prop_string(ctx: *mut duk_context, obj_index: duk_idx_t,
                               key: *const ::libc::c_char) -> duk_bool_t;
    pub fn duk_get_prop_index(ctx: *mut duk_context, obj_index: duk_idx_t,
                              arr_index: duk_uarridx_t) -> duk_bool_t;
    pub fn duk_put_prop(ctx: *mut duk_context, obj_index: duk_idx_t)
     -> duk_bool_t;
    pub fn duk_put_prop_string(ctx: *mut duk_context, obj_index: duk_idx_t,
                               key: *const ::libc::c_char) -> duk_bool_t;
    pub fn duk_put_prop_index(ctx: *mut duk_context, obj_index: duk_idx_t,
                              arr_index: duk_uarridx_t) -> duk_bool_t;
    pub fn duk_del_prop(ctx: *mut duk_context, obj_index: duk_idx_t)
     -> duk_bool_t;
    pub fn duk_del_prop_string(ctx: *mut duk_context, obj_index: duk_idx_t,
                               key: *const ::libc::c_char) -> duk_bool_t;
    pub fn duk_del_prop_index(ctx: *mut duk_context, obj_index: duk_idx_t,
                              arr_index: duk_uarridx_t) -> duk_bool_t;
    pub fn duk_has_prop(ctx: *mut duk_context, obj_index: duk_idx_t)
     -> duk_bool_t;
    pub fn duk_has_prop_string(ctx: *mut duk_context, obj_index: duk_idx_t,
                               key: *const ::libc::c_char) -> duk_bool_t;
    pub fn duk_has_prop_index(ctx: *mut duk_context, obj_index: duk_idx_t,
                              arr_index: duk_uarridx_t) -> duk_bool_t;
    pub fn duk_get_global_string(ctx: *mut duk_context,
                                 key: *const ::libc::c_char) -> duk_bool_t;
    pub fn duk_put_global_string(ctx: *mut duk_context,
                                 key: *const ::libc::c_char) -> duk_bool_t;
    pub fn duk_get_prototype(ctx: *mut duk_context, index: duk_idx_t);
    pub fn duk_set_prototype(ctx: *mut duk_context, index: duk_idx_t);
    pub fn duk_get_finalizer(ctx: *mut duk_context, index: duk_idx_t);
    pub fn duk_set_finalizer(ctx: *mut duk_context, index: duk_idx_t);
    pub fn duk_set_global_object(ctx: *mut duk_context);
    pub fn duk_get_magic(ctx: *mut duk_context, index: duk_idx_t)
     -> duk_int_t;
    pub fn duk_set_magic(ctx: *mut duk_context, index: duk_idx_t,
                         magic: duk_int_t);
    pub fn duk_get_current_magic(ctx: *mut duk_context) -> duk_int_t;
    pub fn duk_put_function_list(ctx: *mut duk_context, obj_index: duk_idx_t,
                                 funcs: *const duk_function_list_entry);
    pub fn duk_put_number_list(ctx: *mut duk_context, obj_index: duk_idx_t,
                               numbers: *const duk_number_list_entry);
    pub fn duk_get_var(ctx: *mut duk_context);
    pub fn duk_put_var(ctx: *mut duk_context);
    pub fn duk_del_var(ctx: *mut duk_context) -> duk_bool_t;
    pub fn duk_has_var(ctx: *mut duk_context) -> duk_bool_t;
    pub fn duk_compact(ctx: *mut duk_context, obj_index: duk_idx_t);
    pub fn duk_enum(ctx: *mut duk_context, obj_index: duk_idx_t,
                    enum_flags: duk_uint_t);
    pub fn duk_next(ctx: *mut duk_context, enum_index: duk_idx_t,
                    get_value: duk_bool_t) -> duk_bool_t;
    pub fn duk_concat(ctx: *mut duk_context, count: duk_idx_t);
    pub fn duk_join(ctx: *mut duk_context, count: duk_idx_t);
    pub fn duk_decode_string(ctx: *mut duk_context, index: duk_idx_t,
                             callback: duk_decode_char_function,
                             udata: *mut ::libc::c_void);
    pub fn duk_map_string(ctx: *mut duk_context, index: duk_idx_t,
                          callback: duk_map_char_function,
                          udata: *mut ::libc::c_void);
    pub fn duk_substring(ctx: *mut duk_context, index: duk_idx_t,
                         start_char_offset: duk_size_t,
                         end_char_offset: duk_size_t);
    pub fn duk_trim(ctx: *mut duk_context, index: duk_idx_t);
    pub fn duk_char_code_at(ctx: *mut duk_context, index: duk_idx_t,
                            char_offset: duk_size_t) -> duk_codepoint_t;
    pub fn duk_equals(ctx: *mut duk_context, index1: duk_idx_t,
                      index2: duk_idx_t) -> duk_bool_t;
    pub fn duk_strict_equals(ctx: *mut duk_context, index1: duk_idx_t,
                             index2: duk_idx_t) -> duk_bool_t;
    pub fn duk_call(ctx: *mut duk_context, nargs: duk_idx_t);
    pub fn duk_call_method(ctx: *mut duk_context, nargs: duk_idx_t);
    pub fn duk_call_prop(ctx: *mut duk_context, obj_index: duk_idx_t,
                         nargs: duk_idx_t);
    pub fn duk_pcall(ctx: *mut duk_context, nargs: duk_idx_t) -> duk_int_t;
    pub fn duk_pcall_method(ctx: *mut duk_context, nargs: duk_idx_t)
     -> duk_int_t;
    pub fn duk_pcall_prop(ctx: *mut duk_context, obj_index: duk_idx_t,
                          nargs: duk_idx_t) -> duk_int_t;
    pub fn duk_new(ctx: *mut duk_context, nargs: duk_idx_t);
    pub fn duk_safe_call(ctx: *mut duk_context, func: duk_safe_call_function,
                         nargs: duk_idx_t, nrets: duk_idx_t) -> duk_int_t;
    pub fn duk_eval_raw(ctx: *mut duk_context,
                        src_buffer: *const ::libc::c_char,
                        src_length: duk_size_t, flags: duk_uint_t)
     -> duk_int_t;
    pub fn duk_compile_raw(ctx: *mut duk_context,
                           src_buffer: *const ::libc::c_char,
                           src_length: duk_size_t, flags: duk_uint_t)
     -> duk_int_t;
    pub fn duk_log(ctx: *mut duk_context, level: duk_int_t,
                   fmt: *const ::libc::c_char, ...);
    pub fn duk_push_context_dump(ctx: *mut duk_context);
}
